# email-reminder

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
email_reminder/: hooks.py  modules.txt
email_reminder/config/: desktop.py  docs.py
email_reminder/email_reminder/doctype/recipients/: recipients.json  recipients.py
email_reminder/email_reminder/doctype/reminder/: reminder.js  reminder.json  reminder.py  test_reminder.py
email_reminder/email_reminder/doctype/reminder_doctypes/: reminder_doctypes.json  reminder_doctypes.py
email_reminder/email_reminder/doctype/reminder_recipients/: reminder_recipients.json  reminder_recipients.py
email_reminder/email_reminder/doctype/reminder_settings/: reminder_settings.js  reminder_settings.json  reminder_settings.py  test_reminder_settings.py
email_reminder/public/js/: reminder_functions.js  test.js
email_reminder/utils/: reminder.py
